--- a/css/full.css
+++ b/css/full.css
@@ -5,9 +5,15 @@
  */
 
 body {
-    background: url('../psagmeno.jpg') no-repeat center center fixed;
+    background: url('../assets/bg.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    font-family: "Ubuntu"
+    color: "fff"
+}
+
+.navbar-brand::after {
+  content: " </>"
 }
