--- a/css/full.css
+++ b/css/full.css
@@ -23,5 +23,13 @@ body {
 }
 
 .transparent{
-  background:rgba(233,236,239,0.1);
+  background: rgba(233,236,239,0.1);
+}
+
+a.link {
+  color: rgba(255,255,255,0.5)
+}
+
+a:hover.link {
+  color: rgba(255,255,255,0.75)
 }
