--- a/css/full.css
+++ b/css/full.css
@@ -4,6 +4,8 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-full/blob/master/LICENSE)
  */
 
+@import url('https://fonts.googleapis.com/css?family=Ubuntu&subset=greek');
+
 body {
     background: url('../assets/bg.jpg') no-repeat center center fixed;
     -webkit-background-size: cover;
